# cv-server

./: Cargo.toml  rawRustNotes
src/: main.rs
static/: index.html
