[package]

name = "hello_world"
version = "0.0.1"
authors = [ "Your name <you@example.com>" ]

edition = "2018"

[dependencies]
rocket = "0.4.4"
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0"

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["json"]